# zkdemo

./: .gitignore  Cargo.toml  README.md
circom/andn/: README.md  andn.r1cs  andn.sym  andn_0000.zkey  andn_0001.zkey  input.json  pot12_0001.ptau  proof.json  verification_key.json  verifier.sol  witness.wtns
circom/andn/andn_js/: andn.wasm
circom/filter/: filter.circom  filter.r1cs  filter.sym
circom/filter/filter_js/: filter.wasm
circom/multiplier2/multiplier2_js/: multiplier2.wat  multiplier2_0000.zkey  multiplier2_0001.zkey  pot12_0001.ptau  proof.json  verification_key.json  verifier.sol
crytool/: bitciphers.sage  bitciphers.sage.py  chap01_sample01.sage  chap01_sample01.sage.py  chap02_sample01.sage  chap02_sample02.sage  chap02_sample03.sage  chap02_sample04.sage  chap02_sample05.sage  chap02_sample06.sage  chap02_sample07.sage  chap02_sample08.sage  chap02_sample09.sage  chap02_sample10.sage  chap02_sample11.sage  chap02_sample12.sage  chap02_sample13.sage  chap02_sample14.sage  chap02_sample15.sage  chap03_sample01.sage  chap03_sample02.sage  chap03_sample03.sage  chap03_sample04.sage  chap03_sample05.sage  chap03_sample06.sage  chap04_sample01.sage  chap04_sample02.sage  chap04_sample03.sage  chap04_sample04.sage  chap04_sample05.sage  chap04_sample06.sage  chap04_sample07.sage  chap04_sample08.sage  chap04_sample09.sage  chap04_sample10.sage  chap04_sample11.sage  chap04_sample12.sage  chap04_sample13.sage  chap04_sample14.sage  chap04_sample15.sage  (+28 more)
elf/: riscv32im-succinct-zkvm-elf
notes/: SPLA.md
python/pazk/: matplot.py
src/ark_ec_demo/: Cargo.toml
src/ark_ec_demo/src/: main.rs
src/ark_ff_demo/: Cargo.toml
src/ark_ff_demo/src/: main.rs
src/ark_ser_demo/: Cargo.toml
src/ark_ser_demo/src/: main.rs
src/arkworks/ec/: Cargo.toml
src/arkworks/ec/src/: main.rs
src/arkworks/ff/: Cargo.toml
src/arkworks/ff/src/: main.rs
src/arkworks/merkletree/: Cargo.toml
src/arkworks/merkletree/src/: constraints.rs  main.rs
src/arkworks/ser/: Cargo.toml
src/arkworks/ser/src/: main.rs
src/bellpepper/linear_combination/: Cargo.toml
src/bellpepper/linear_combination/src/: main.rs
src/bellperson/hash/: Cargo.toml
src/bellperson/hash/src/: main.rs
src/halo2/: Cargo.toml
src/halo2/chips/: Cargo.toml
src/halo2/chips/src/: main.rs
src/halo2/cost/: Cargo.toml
src/halo2/cost/src/: main.rs
src/halo2/fib1/: Cargo.toml
src/halo2/fib1/src/: main.rs
src/halo2/fib2/: Cargo.toml
src/halo2/fib2/src/: main.rs
src/halo2/fib3/: Cargo.toml
src/halo2/fib3/src/: main.rs
src/halo2/is_zero/: Cargo.toml
src/halo2/is_zero/src/: is_zero_config.rs  main.rs
src/halo2/layout/: Cargo.toml
src/halo2/layout/src/: main.rs
src/halo2/range_check1/: Cargo.toml
src/halo2/range_check1/src/: main.rs
src/halo2/range_check2/: Cargo.toml
src/halo2/range_check2/src/: main.rs  table.rs
src/halo2/range_check3/: Cargo.toml
src/halo2/range_check3/src/: main.rs  table.rs
src/halo2/simple/: Cargo.toml
src/halo2/simple/src/: main.rs
src/halo2/simple1/: Cargo.toml
src/halo2/simple1/src/: main.rs
src/halo2/structs/: Cargo.toml
src/halo2/structs/src/: main.rs
src/halo2_chips/: Cargo.toml
src/halo2_chips/src/: main.rs
src/halo2_cost/: Cargo.toml
src/halo2_exam/: Cargo.toml  README.md
src/halo2_exam/src/: main.rs
src/halo2_layout/: Cargo.toml
src/halo2_layout/src/: main.rs
src/halo2_simple/: Cargo.toml
src/halo2_struct/: Cargo.toml
src/halo2_struct/src/: main.rs
src/nova/: Cargo.toml
src/nova/circuit/: Cargo.toml
src/nova/circuit/src/: main.rs
src/nova/minroot/: Cargo.toml
src/nova/minroot/src/: main.rs
src/nova/sign/: Cargo.toml
src/nova/sign/src/: main.rs
src/nova_minroot/: Cargo.toml
src/nova_minroot/src/: main.rs
src/nova_sign/: Cargo.toml
src/nova_sign/src/: main.rs
src/pazk/: README.md
src/pazk/p3_1/: Cargo.toml
src/sindri/forge-sample/: Cargo.toml  README.md
src/sindri/forge-sample/andN/: andn.circom
src/sindri/forge-sample/src/: client.rs  main.rs
src/sp1/fib/program/: Cargo.toml
src/sp1/fib/program/elf/: riscv32im-succinct-zkvm-elf
src/sp1/fib/script/: Cargo.toml  proof-with-io.json  rust-toolchain
src/sp1/fib/script/src/: main.rs
src/supernova/: Cargo.toml
src/supernova/example/: Cargo.toml
src/supernova/example/src/: main.rs
