[workspace]
members = [
    "src/halo2_simple",
    "src/halo2_layout",
    "src/halo2_cost",
    "src/halo2_chips",
    "src/halo2_exam",
    "src/halo2_struct",
    "src/nova_minroot",
    "src/nova_sign",
    "src/supernova",
    "src/ark_ff_demo",
    "src/ark_ser_demo",
    "src/ark_ec_demo",
]
