[workspace]
members = [
    "src/arkworks/ec",
    "src/arkworks/ff",
    "src/arkworks/ser",
    "src/halo2/simple",
    "src/halo2/simple1",
    "src/halo2/fib1",
    "src/halo2/layout",
    "src/halo2/chips",
    "src/halo2/cost",
    "src/halo2/structs",
    "src/supernova/example",
    "src/nova/sign",
    "src/nova/minroot",
    "src/nova_minroot",
]
resolver = "2"


[workspace.dependencies]
ark-bls12-381 = { version = "0.4" }
ark-crypto-primitives = { version = "0.4" }
ark-ec = { version = "0.4" }
ark-ff = { version = "0.4", default-features = false }
ark-relations = { version = "0.4" }
ark-r1cs-std = { version = "0.4" }
ark-serialize = { version = "0.4", features = ["derive"] }
ark-std = { version = "0.4" }
bellperson = { version = "0.25", default-features = false }
bincode = { version = "1.2" }
ff = { version = "0.13", default-features = false, features = ["derive"] }
flate2 = { version = "1.0", default-features = false }
group = { version = "0.13" }
gumdrop = { version = "0.8" }
halo2_proofs = { git = "https://github.com/zcash/halo2", package = "halo2_proofs", features = [
    "dev-graph",
] }
nova-snark = { git = "https://github.com/microsoft/Nova", rev = "dd3b1a217d49f662571e124f6a07fc6441aa0264" }
num-bigint = { version = "0.4.3", features = ["serde", "rand"] }
pasta_curves = { version = "0.5", features = ["repr-c", "serde"] }
rand = { version = "0.8" }
rand_core = { version = "0.6" }
sha3 = { version = "0.10" }
supernova = { git = "https://github.com/jules/supernova", rev = "a707ad58347bc86d2ad4edac6494d580c3a08cdd" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
