[package]
name = "halo2_struct"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2_proofs = { version = "0.3", default-features = false, features = [
    "dev-graph",
] }
rand_core = "0.6"
ff = "0.13"
