[package]
name = "nova_minroot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nova-snark = { git = "https://github.com/privacy-scaling-explorations/Nova", rev = "56f3a14d77dd4b1f0522411e80002b3b04fb39a5" }
bellperson = { version = "0.24", default-features = false }
bincode = "1.2"
ff = { version = "0.12", features = ["derive"] }
num-bigint = { version = "0.4", features = ["serde", "rand"] }
flate2 = "1.0"
pasta_curves = { version = "0.5.2", features = [
    "repr-c",
    "serde",
], package = "fil_pasta_curves" }
