[package]
name = "supernova"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
supernova = { git = "https://github.com/jules/supernova", rev = "a707ad58347bc86d2ad4edac6494d580c3a08cdd" }
ark-crypto-primitives = { version = "0.4", features = [
    "sponge",
    "r1cs",
], default-features = false }
ark-bls12-381 = { version = "0.4", default-features = false }
ark-relations = { version = "0.4", default-features = false }
ark-r1cs-std = { version = "0.4", default-features = false }
ark-ff = { version = "0.4", default-features = false }
