[package]
name = "ff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-bls12-381 = { workspace = true }
ark-ff = { workspace = true }
ark-std = { workspace = true }
num-bigint = { workspace = true }
