[package]
name = "cost"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
group = { workspace = true }
gumdrop = { workspace = true }
halo2_proofs = { workspace = true }
halo2curves = { workspace = true }
rand_core = { workspace = true }
