[package]
name = "range_check1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ff = { workspace = true }
halo2_proofs = { workspace = true }
halo2curves = { workspace = true }
plotters = { workspace = true }
