[package]
name = "sign"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bellperson = { workspace = true }
ff = { workspace = true }
flate2 = { workspace = true }
nova-snark = { workspace = true }
num-bigint = { workspace = true }
pasta_curves = { workspace = true }
rand = { workspace = true }
sha3 = { workspace = true }
