[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-bls12-381 = { workspace = true }
ark-crypto-primitives = { workspace = true }
ark-relations = { workspace = true }
ark-r1cs-std = { workspace = true }
ark-ff = { workspace = true }
supernova = { workspace = true }
